--- a/NoBadClothes/wwwroot/test.html
+++ b/NoBadClothes/wwwroot/test.html
@@ -11,6 +11,11 @@
     <button>Test</button>
 </form>
 
+<form method="get" action="/api/weather/gbgnexthourtemp">
+    Temperatur i Göteborg:
+    <button>Visa temperatur</button>
+</form>
+
 
 
 </body>
