--- a/NoBadClothes/wwwroot/test.html
+++ b/NoBadClothes/wwwroot/test.html
@@ -16,6 +16,10 @@
     <button>Visa temperatur</button>
 </form>
 
+<form method="get" action="/api/weather/seedtopten">
+    Ladda ner data för Sveriges 10 största städer:
+    <button>Seed</button>
+</form>
 
 
 </body>
