--- a/NoBadClothes/wwwroot/weather.html
+++ b/NoBadClothes/wwwroot/weather.html
@@ -6,9 +6,8 @@
 <body>
     
     <form method="get" action="/api/weather/getweather">
-        Stad: <input name="city" value="" />
-        Datum: <input name="date" value="" />
-        Tid: <input name="time" value="" />
+        Stad: <input name="cityName" value="" />
+        Datum och tid: <input name="dateTime" value="" />
         <button>Vädra!</button>
     </form>
 
