--- a/NoBadClothes/wwwroot/test.html
+++ b/NoBadClothes/wwwroot/test.html
@@ -16,7 +16,7 @@
     <button>Visa temperatur</button>
 </form>
 
-<form method="get" action="/api/weather/seedtopten">
+<form method="post" action="/api/weather/seedtopten">
     Ladda ner data för Sveriges 10 största städer:
     <button>Seed</button>
 </form>
