--- a/NoBadClothes/wwwroot/weather.html
+++ b/NoBadClothes/wwwroot/weather.html
@@ -5,11 +5,19 @@
 </head>
 <body>
     
-    <form method="get" action="/api/weather/getweather">
-        Stad: <input name="cityName" value="" />
-        Datum och tid: <input name="dateTime" value="" />
-        <button>Vädra!</button>
-    </form>
+<form method="get" action="/api/weather/getweather">
+    Stad: <input name="cityName" value="" />
+    Datum och tid: <input name="dateTime" value="" />
+    <button>Vädra!</button>
+</form>
+<hr/>
+
+<form method="get" action="/api/clothes/getClothes">
+    Stad: <input name="cityName" value="" />
+    När ska du gå ut: <input name="dateTime" value="" />
+    Hur länge ska du vara ute :  <input name="hour" value="" />
+    <button>Lista med kläder</button>
+</form>
 
 </body>
 </html>
