--- a/NoBadClothes/wwwroot/weather.html
+++ b/NoBadClothes/wwwroot/weather.html
@@ -5,11 +5,16 @@
 </head>
 <body>
     
-    <form method="get" action="/api/weather/getweather">
-        Stad: <input name="cityName" value="" />
-        Datum och tid: <input name="dateTime" value="" />
-        <button>Vädra!</button>
-    </form>
+<form method="get" action="/api/weather/getweathertime">
+    Stad: <input name="cityName" value="" />
+    Datum och tid: <input name="dateTime" value="" />
+    <button>Vädra!</button>
+</form>
+
+<form method="get" action="/api/weather/getweather">
+    Stad: <input name="cityName" value="" />
+    <button>Vädra!</button>
+</form>
 
 </body>
 </html>
