--- a/NoBadClothes/wwwroot/weather.html
+++ b/NoBadClothes/wwwroot/weather.html
@@ -22,7 +22,7 @@
 
 <form method="get" action="/api/clothes/getClothes">
     Stad: <input name="cityName" value="" />
-    När ska du gå ut: <input name="dateTime" value="" />
+    När ska du gå ut: <input name="dateTime" type="datetime-local" value="" />
     Hur länge ska du vara ute :  <input name="hour" value="" />
     <button>Lista med kläder</button>
 </form>
