--- a/NoBadClothes/wwwroot/clothes.html
+++ b/NoBadClothes/wwwroot/clothes.html
@@ -36,7 +36,7 @@
     <hr />
 
 
-    //<form method="get">
+    //<form method="get" action="/api/clothes/getClothes/">
         Välj stad:<br />
         <select name="cityName" id="cityName">
             <option value="Stockholm">Stockholm</option>
@@ -68,15 +68,14 @@
             <option value="55">55</option>
         </select>
         <br><br />
-        <button id="whatButton" >What??!!</button>
+        <button id="whatButton">What??!!</button>
     </form>
-<hr />
+    <hr />
 
-<section id="text">
-</section>
+    <section id="text"></section>
 
-<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-    <script src="/js/Clothes.js"></script>
+    <!--<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+    <script src="/js/NewsApp.js"></script> -->
 
-</body>
-</html>
+    </body>
+    </html>
