--- a/NoBadClothes/wwwroot/clothes.html
+++ b/NoBadClothes/wwwroot/clothes.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8" />
     <title>No bad clothes</title>
     <style type="text/css">
-        h1, p {
+        h1, h3, p {
             font-family: "Arial Black", Gadget, sans-serif;
             text-align: center;
             color: DarkCyan;
         }
-        form {
+        div {
             font-family: "Arial Black", Gadget, sans-serif;
             color: DarkCyan;
             display: block;
@@ -25,18 +25,18 @@
             display: block;
             margin-left: auto;
             margin-right: auto;
-            width: 50%;
         }
     </style>
 
 </head>
 <body style="background-color: paleturquoise">
 
-    <h1>Vilka kläder ska jag ta på mig</h1>
+<h1>Det finns inga dåliga kläder</h1>
+<h3>...bara dåligt väder</h3>
     <hr />
 
 
-    //<form method="get" action="/api/clothes/getClothes/">
+    <div >
         Välj stad:<br />
         <select name="cityName" id="cityName">
             <option value="Stockholm">Stockholm</option>
@@ -68,14 +68,14 @@
             <option value="55">55</option>
         </select>
         <br><br />
-        <button id="whatButton">What??!!</button>
-    </form>
+        <button id="whatButton">Vilka kläder ska jag ta på mig?</button>
+    </div>
     <hr />
 
-    <section id="text"></section>
+    <div id="text"></div>
 
-    <!--<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-    <script src="/js/NewsApp.js"></script> -->
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+    <script src="/js/Clothes.js"></script>
 
     </body>
     </html>
