--- a/NoBadClothes/wwwroot/clothes.html
+++ b/NoBadClothes/wwwroot/clothes.html
@@ -36,7 +36,7 @@
     <hr />
 
 
-    //<form method="get" action="/api/clothes/getClothes/">
+    <form method="get" action="/api/clothes/getClothes/">
         Välj stad:<br />
         <select name="cityName" id="cityName">
             <option value="Stockholm">Stockholm</option>
