--- a/NoBadClothes/wwwroot/weather.html
+++ b/NoBadClothes/wwwroot/weather.html
@@ -2,29 +2,14 @@
 <html>
 <head>
     <title>weather</title>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+    <script src="/js/Weather.js"></script>
 </head>
 <body>
     
-
-
-<form method="get" action="/api/weather/getweather">
-    Stad: <input name="cityName" value="" />
-    Datum och tid: <input name="dateTime" value="" />
-    <button>Vädra!</button>
-</form>
-
-
-<form method="get" action="/api/weather/getweather">
-    Stad: <input name="cityName" value="" />
-    <button>Vädra!</button>
-</form>
-<hr/>
-
-<form method="get" action="/api/clothes/getClothes">
-    Stad: <input name="cityName" value="" />
-    När ska du gå ut: <input name="dateTime" type="datetime-local" value="" />
-    Hur länge ska du vara ute :  <input name="hour" value="" />
-    <button>Lista med kläder</button>
+<form method="post" action="/api/weather/seedtopten">
+    Ladda ner data för Sveriges 10 största städer:
+    <button>Seed</button>
 </form>
 
 </body>
