--- a/NoBadClothes/wwwroot/weather.html
+++ b/NoBadClothes/wwwroot/weather.html
@@ -2,15 +2,16 @@
 <html>
 <head>
     <title>weather</title>
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-    <script src="/js/Weather.js"></script>
+
 </head>
-<body>
-    
-<form method="post" action="/api/weather/seedtopten">
-    Ladda ner data för Sveriges 10 största städer:
-    <button>Seed</button>
-</form>
+<body>    
+    <div>
+        Ladda ner data för Sveriges 10 största städer:
+        <button id="seedButton">Seed</button>
+    </div>
+
+<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+<script src="/js/Weather.js"></script>    
 
 </body>
 </html>
