--- a/NoBadClothes/wwwroot/weather.html
+++ b/NoBadClothes/wwwroot/weather.html
@@ -6,7 +6,8 @@
 </head>
 <body>    
     <div>
-        Ladda ner data för Sveriges 10 största städer:
+        Ladda ner data för Sveriges 10 största städer: <br/>
+        (ca 60 sekunder)<br />
         <button id="seedButton">Seed</button>
     </div>
 
