--- a/NoBadClothes/wwwroot/clothes.html
+++ b/NoBadClothes/wwwroot/clothes.html
@@ -5,17 +5,14 @@
     <meta charset="utf-8" />
     <title>No bad clothes</title>
     <style type="text/css">
-        h1, h3, p {
+        h1, h3, p, div {
             font-family: "Arial Black", Gadget, sans-serif;
             text-align: center;
             color: DarkCyan;
         }
 
         div {
-            font-family: "Arial Black", Gadget, sans-serif;
-            color: DarkCyan;
             display: block;
-            text-align: center;
         }
 
         ul {
@@ -43,18 +40,7 @@
 
     <div>
         Välj stad:<br />
-        <select name="cityNames" id="cityNames">
-            <!--<option value="Stockholm">Stockholm</option>
-            <option value="Göteborg">Göteborg</option>
-            <option value="Malmö">Malmö</option>>
-            <option value="Uppsala">Uppsala</option>
-            <option value="Västerås">Västerås</option>
-            <option value="Örebro">Örebro</option>
-            <option value="Linköping">Linköping</option>
-            <option value="Helsingborg">Helsingborg</option>
-            <option value="Jönköping">Jönköping</option>
-            <option value="Norrköping">Norrköping</option>-->
-        </select>
+        <select name="cityNames" id="cityNames"></select>
         <br />
         <br />
 
@@ -78,8 +64,6 @@
     <hr />
 
     <div id="text"></div>
-
-
 
 </body>
 </html>
